# robocup-main

./: .gitmodules  README.md
environment_manager/: CMakeLists.txt  package.xml
robocup_pepper-dialogue_hri/dialogue_hri_action/: CMakeLists.txt  package.xml
robocup_pepper-dialogue_hri/dialogue_hri_action/action/: AddInMemory.action  DialogueSendSignal.action
robocup_pepper-dialogue_hri/dialogue_hri_node/: CMakeLists.txt  package.xml
robocup_pepper-dialogue_hri/dialogue_hri_node/launch/: hri_mng.launch
robocup_pepper-dialogue_hri/dialogue_hri_node/scripts/: DialogueHri.py  DialogueHriTestAction.py  GetImageHri.py  MoveSoundHri.py  MoveTurnRobot.py
robocup_pepper-dialogue_hri/dialogue_hri_node/scripts/process/: SoundTracker.py
robocup_pepper-dialogue_hri/dialogue_hri_srv/: CMakeLists.txt  package.xml
robocup_pepper-dialogue_hri/dialogue_hri_srv/srv/: GoToCarryPose.srv  MoveArmHand.srv  MoveSound.srv  MoveTurn.srv  PointAt.srv  ReleaseArms.srv  TakePicture.srv  TurnToInterestPoint.srv
robocup_pepper-general_mng/general_mng/: CMakeLists.txt  package.xml
robocup_pepper-general_mng/general_mng/config/: common_gm.yaml
robocup_pepper-general_mng/general_mng/data/: CleanUp2020CPEScenario.json  CleanUp2020CPEScenario_old.json  CleanUp2020CPEScenario_v3.json  Receptionist2020CPEScenario.json  Receptionist2020CPEScenario_v1_WORKING_DO_NOT_DELETE.json  Receptionist2020CPEScenario_v2_WORKING_DO_NOT_DELETE.json
robocup_pepper-general_mng/general_mng/data/cleanup/: locations.json  locations_clean_up.json  locations_clean_up_old.json  locations_old.json  objects.json  scenarioInfos.json  videos.json
robocup_pepper-general_mng/general_mng/data/receptionist/: drinks.json  guests.json  guestsInfos.json  locations.json  people.json  videos.json
robocup_pepper-general_mng/general_mng/launch/: Garbage_2019.launch  Inspection_2019.launch  Receptionist_2019.launch  cocktail.launch  general_manager.launch  gprs.launch  spr.launch
robocup_pepper-general_mng/general_mng/scripts/: GeneralManager.py  debug_nav_palbator.py  test_lt_simu.py  test_people_management.py  test_pointing_object.py
robocup_pepper-general_mng/general_mng/scripts/common/: robotState.py
robocup_pepper-general_mng/general_mng/scripts/meta_behaviour/: LTHighBehaviour.py
robocup_pepper-general_mng/general_mng/scripts/meta_lib/: LTAbstract.py  LTDiagnostics.py  LTHriManager.py  LTMotion.py  LTNavigation.py  LTPerception.py  LTServiceResponse.py  LTSimulation.py  LTVoiceSound.py
robocup_pepper-general_mng/general_mng/scripts/scenario/: AbstractScenario.py  CleanUp2020CPEScenario.py  DoorOpenAndNavigScenarioV1.py  Inspection.py  NavigationPerceptionV1.py  Receptionist2020CPEScenario.py
robocup_pepper-general_mng/general_mng/template/: test-scenario.json
robocup_pepper-navigation_mng/navigation_manager/: CMakeLists.txt  README.md  package.xml
robocup_pepper-navigation_mng/navigation_manager/action/: NavMng.action
robocup_pepper-navigation_mng/navigation_manager/launch/: navigation_mng_overall.launch  pmb2_navigation_mng_overall.launch
robocup_pepper-navigation_mng/navigation_manager/scripts/: NavigationManager.py  gm_nav_order_simulated.py  pmb2_Goto_action_client.py  pmb2_Goto_action_server.py  pmb2_navigation_manager_client.py  simple_goal_publisher.py
robocup_pepper-navigation_mng/pepper_door_open_detector/: CMakeLists.txt  package.xml
robocup_pepper-navigation_mng/pepper_door_open_detector/launch/: opening_door_detector.launch
robocup_pepper-navigation_mng/pepper_door_open_detector/scripts/: OpeningDoorDetector.py  OpeningDoorDetectorSonar.py
robocup_pepper-object_mng/: CMakeLists.txt  package.xml
robocup_pepper-object_mng/action/: LookAtObject.action  ObjectDetection.action  ObjectDetectionEntity.action
robocup_pepper-object_mng/launch/: darknet_ros.launch
robocup_pepper-object_mng/scripts/: ObjectManagementNode.py  ObjectManagementNodeTestAction.py
robocup_pepper-people_mng/people_mng/ros_people_mng/: CMakeLists.txt  package.xml
robocup_pepper-people_mng/people_mng/ros_people_mng_actions/: CMakeLists.txt  package.xml
robocup_pepper-people_mng/people_mng/ros_people_mng_actions/action/: GetPeopleNameFromImg.action  LearnPeopleFromImg.action  ProcessPeopleFromImg.action
robocup_pepper-people_mng/people_mng/ros_people_mng_msgs/: CMakeLists.txt  package.xml
robocup_pepper-people_mng/people_mng/ros_people_mng_msgs/msg/: PeopleMetaInfo.msg  PeopleMetaInfoDetails.msg  PeopleMetaInfoList.msg  PeopleMetaInfoListWithoutImg.msg
robocup_pepper-people_mng/people_mng/ros_people_mng_node/: CMakeLists.txt  package.xml
robocup_pepper-people_mng/people_mng/ros_people_mng_node/config/: common_people_mng.yaml
robocup_pepper-people_mng/people_mng/ros_people_mng_srvs/: CMakeLists.txt  package.xml
robocup_pepper-robocup_msgs/: CMakeLists.txt  README.md  package.xml
robocup_pepper-robocup_msgs/launch/: face_identification_test.launch  face_identification_test_simple.launch
robocup_pepper-robocup_msgs/msg/: Action.msg  Entity.msg  Entity2D.msg  Entity2DList.msg  EntityList.msg  InterestPoint.msg  NavigationAction.msg  OAction.msg  OrganizedActionList.msg  gm_bus_msg.msg
robocup_pepper-tts_hri/tts_hri/: CMakeLists.txt  package.xml
robocup_pepper-tts_hri/tts_hri/action/: TtsHri.action
robocup_pepper-tts_hri/tts_hri/launch/: tts_hri.launch  tts_joy.launch
robocup_pepper-tts_hri/tts_hri/scripts/: ResetVisualGrid.py  TtsHri.py  TtsJoy.py  TtsJoyImage.py
robocup_pepper-world_mng/2Dto3DEntity/: CMakeLists.txt  package.xml
robocup_pepper-world_mng/2Dto3DEntity/scripts/: darknet_2d_to_3d.py  rospy
robocup_pepper-world_mng/2Dto3DEntity/src/: convert_2d_to_3d.cpp
robocup_pepper-world_mng/2Dto3DEntity/srv/: get3Dfrom2D.srv
robocup_pepper-world_mng/map_manager/: CMakeLists.txt  README.md  package.xml
robocup_pepper-world_mng/map_manager/scripts/: MapManager.py  MapTools.py
robocup_pepper-world_mng/map_manager/srv/: activateTF_service.srv  getOrient_service.srv  getitP_service.srv  saveOrient_service.srv  saveitP_base_link_service.srv  saveitP_service.srv
(+243 files in other folders)
