<?xml version="1.0"?>
<package>
  <name>object_management</name>
  <version>0.0.0</version>
  <description>The object_management</description>
  <maintainer email="jsaraydaryan@todo.todo">jsaraydaryan</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>actionlib</build_depend>   
  <build_depend>message_runtime</build_depend>
  <build_depend>robocup_msgs</build_depend>
  <build_depend>pepper_pose_for_nav</build_depend>
  <build_depend>darknet_gateway_srvs</build_depend>
  
    
  <run_depend>rospy</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>robocup_msgs</run_depend>
  <run_depend>pepper_pose_for_nav</run_depend>
  <run_depend>darknet_gateway_srvs</run_depend>
  

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
<build_depend>message_generation</build_depend>
</package>