<?xml version="1.0"?>
<package>
  <name>dialogue_hri_actions</name>
  <version>1.0.0</version>
  <description>Ros service for pepper naoqi dialogue interaction</description>

  <maintainer email="jacques.saraydaryan@cpe.fr">jsarayaryan</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>actionlib</build_depend>   

  <build_depend>message_runtime</build_depend>
    
  <run_depend>rospy</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>message_runtime</run_depend>

<build_depend>message_generation</build_depend>

</package>
