<package>
  <name>convert_2d_to_3d</name>
  <version>0.0.0</version>
  <description>
     robocup_wire
  </description>
  <maintainer email="jacques.saraydaryan@cpe.fr">jsaraydaryan</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>robocup_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_runtime</build_depend>
  <build_depend>libpcl-all-dev</build_depend>
  
 <build_depend>visualization_msgs</build_depend>
  
 <build_depend>tf</build_depend>
 <build_depend>darknet_ros_msgs</build_depend>
 
  
 <run_depend>tf</run_depend>


 <run_depend>visualization_msgs</run_depend>


 <run_depend>libpcl-all-dev</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>robocup_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>darknet_ros_msgs</run_depend>
    
</package>



