<package>
  <name>ros_people_mng</name>
  <version>0.0.1</version>
  <description>ROS Message Package for ros_people_mng</description>

  <maintainer email="j@s.fr">Jacques Saraydaryan</maintainer>

  <license>TODO</license>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>ros_people_mng_node</run_depend>
  <run_depend>ros_people_mng_msgs</run_depend>
  <run_depend>ros_people_mng_srvs</run_depend>
  <run_depend>ros_people_mng_actions</run_depend>

  <export>
    <metapackage/>
  </export>
</package>
