<?xml version="1.0"?>
<package>
  <name>ros_people_mng_node</name>
  <version>0.0.0</version>
  <description>The ros_people_mng_node</description>
  <maintainer email="jsaraydaryan@todo.todo">jsaraydaryan</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>  
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>actionlib</build_depend>   
  <build_depend>ros_people_mng_msgs</build_depend>
  <build_depend>ros_people_mng_srvs</build_depend>
  <build_depend>ros_people_mng_actions</build_depend>
    
  <run_depend>rospy</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>ros_people_mng_msgs</run_depend>
  <run_depend>ros_people_mng_srvs</run_depend>
  <run_depend>ros_people_mng_actions</run_depend>


</package>
