<?xml version="1.0"?>
<package>
  <name>ros_people_mng_srvs</name>
  <version>0.0.0</version>
  <description>The ros_people_mng_srvs</description>
  <maintainer email="jsaraydaryan@todo.todo">jsaraydaryan</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>ros_people_mng_msgs</build_depend>
  <build_depend>message_runtime</build_depend>


    
  <run_depend>rospy</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>ros_people_mng_msgs</run_depend>
  <run_depend>message_runtime</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
<build_depend>message_generation</build_depend>
</package>